Repair z-index under chrome

--- a/themes/jay_kay/css/build.css
+++ b/themes/jay_kay/css/build.css
@@ -142,20 +142,24 @@ td.th {
 }
 /* Zoom */
 #zoom {
-	position: fixed ;
+	position: absolute;
 	transition-property: transform ; /* Transition makes mouse hovers zoom and 'leave' main_div
 	and add a laggy effect, use it only for rotate */
 	z-index: 11 ;
+}
+#zoom > img {
+	position: absolute;
+	z-index: 12 ;
 }
 #zoom.split {
 	transform: rotate(90deg) translate(-52px, -52px) ;
 }
 #zoom .aftermath {
-	transform: scale(1.29, 1.29) rotate(-90deg) translate(0px, -112px);
+	transform: scale(1.29, 1.29) rotate(-90deg) translate(0px, 82px);
 	z-index: -1;
 }
 .smallres #zoom .aftermath {
-	transform: scale(1.29, 1.29) rotate(-90deg) translate(0px, -91px);
+	transform: scale(1.29, 1.29) rotate(-90deg) translate(0px, 66px);
 }
 #zoom.split.displaytop { /* When displayed on top of mouse */
 	transform: rotate(90deg) translate(52px, -52px) ;
